--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,8 @@ dependencies {
     compile group: 'log4j', name: 'log4j', version: '1.2.17'
     compile group: 'org.slf4j', name: 'slf4j-log4j12', version: '1.7.25'
     compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
-
+    compile 'com.google.guava:guava:23.1-jre'
+    compile 'commons-io:commons-io:2.5'
 
     compile "org.apache.commons:commons-lang3:${project['commons-lang3.version']}"
 }
